--- a/exo_github.html
+++ b/exo_github.html
@@ -10,5 +10,12 @@
     
 <div class="header"></div>
 
+<div class="content1"></div>
+
+<div class="trouNormand"></div>
+
+<div class="content2"></div>
+
+<div class="footer"></div>
 </body>
 </html>
